--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ padding: 20px;
 }
 .form{
     padding: 40px;
-    background-color: gray;
+    background-color: orange;
     box-sizing: border-box;
     border: 2px solid rgb(93, 11, 11) ;
     box-shadow: 100px;
